--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-homework-template",
+  "name": "goit-react-01-components",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Jk-frontEnd.github.io/goit-hw-react-01-components/",
+  "homepage": "https://Jk-frontEnd.github.io/goit-react-01-components/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
